[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scene/Player/Player_women.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/Warrior/SpriteSheet/Warrior_Sheet-Effect.png" type="Texture" id=2]
[ext_resource path="res://Scene/HealthBar/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 14.0

[sub_resource type="Animation" id=7]
resource_name = "Air"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Anna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitPosition/HitBox/HIt_collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Attack_1"
length = 0.65
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Anna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195, 0.26, 0.325, 0.39, 0.52, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anna:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195, 0.325, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.160249, -0.803788 ), Vector2( 0.1, -0.804 ), Vector2( 0.105, -0.804 ), Vector2( 0.134, -0.804 ), Vector2( 0.2, -0.804 ), Vector2( 0.160249, -0.803788 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitPosition/HitBox/HIt_collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.325, 0.455, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.33, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitPosition/HitBox/HIt_collision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.33, 0.43, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 19.6232, 1.83725 ), Vector2( 19.623, 1.7 ), Vector2( 19.623, 1.65 ), Vector2( 19.6232, 1.83725 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.13, 0.24, 0.33, 0.52, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( -1, 3 ), Vector2( -1.2, 3 ), Vector2( 0.384615, 3 ), Vector2( 0, 3 ), Vector2( 0, 3 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Dash"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Anna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.05, 0.09, 0.13, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 69, 70, 71, 72, 73, 74, 75 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitPosition/HitBox/HIt_collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath("Anna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Hurt"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Anna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 37, 38, 39, 40 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Anna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.18, 0.27, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitPosition/HitBox/HIt_collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Jump"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Anna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43, 44, 45 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitPosition/HitBox/HIt_collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Anna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anna:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.00124534, -0.0189393 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitPosition/HitBox/HIt_collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 19.6232, 1.83725 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anna:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitPosition/HitBox/HIt_collision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.8
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Anna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.16, 0.27, 0.39, 0.53, 0.66, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anna:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.39, 0.53, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.00124534, -0.0189393 ), Vector2( 0.2, -1 ), Vector2( 0.12, -0.566 ), Vector2( 0.177, -0.5 ), Vector2( 0.00124538, -0.0189394 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitPosition/HitBox/HIt_collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 0.0

[node name="Player2" type="KinematicBody2D"]
collision_mask = 92
script = ExtResource( 1 )

[node name="Anna" type="Sprite" parent="."]
position = Vector2( 0.00124534, -0.0189393 )
scale = Vector2( 0.71978, 0.735134 )
texture = ExtResource( 2 )
flip_h = true
hframes = 6
vframes = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Air = SubResource( 7 )
anims/Attack_1 = SubResource( 8 )
anims/Dash = SubResource( 13 )
anims/Die = SubResource( 10 )
anims/Hurt = SubResource( 12 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 6 )
anims/RESET = SubResource( 4 )
anims/Run = SubResource( 5 )

[node name="HitPosition" type="Position2D" parent="."]
position = Vector2( -2.10511, 0.0255604 )

[node name="HitBox" type="Area2D" parent="HitPosition"]
collision_layer = 32
collision_mask = 2

[node name="HIt_collision" type="CollisionShape2D" parent="HitPosition/HitBox"]
position = Vector2( 19.6232, 1.83725 )
shape = SubResource( 2 )
disabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]

[node name="Timer_attack" type="Timer" parent="."]
wait_time = 0.66

[connection signal="body_entered" from="HitPosition/HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_attack" to="." method="_on_Timer_attack_timeout"]
